# lls

./: .gitignore  AGENTS.md  MVP_TECH_DEBT.md  README.md  config.toml  main.py  pyproject.toml
PV/: hailuo_prompts.md  prompt_manifest.json  readme.md  shots.json
assets/: ~$件背景(1).docx  序幕剧情(1).docx  案件背景(1).docx
assets/audio/bgm/: library.json
assets/audio/sfx/: library.json
assets/img/: SOURCES.md  catalog.json
assets/img/backgrounds/: library.json
docs/: readme.md  scene_interaction_schema.md
reverse_detective/: __init__.py  ai_client.py  app.py  audio.py  config.py  custom_story.py  game_state.py  local_logic.py  models.py  renderer.py  scene_loader.py  story_loader.py
reverse_detective/utils/: __init__.py  assets.py  audio_assets.py  text.py  text_input.py
scripts/: build_sideview_assets.py  build_story_caches.py
stories/: back_background.txt  game_background.json  tingtaoge_last_night.json
stories/glass_gallery_closing_night/: cached_initial_scene.json  story.json
stories/tingtaoge_last_night/: cached_initial_scene.json  story.json
tests/: test_ai_client.py  test_app_action_resolution.py  test_app_menu.py  test_asset_library.py  test_audio_assets.py  test_custom_story.py  test_game_state.py  test_main_entrypoint.py  test_renderer_assets.py  test_scene_loader.py  test_story_loader.py  test_text_overflow.py
